--- a/library.bib
+++ b/library.bib
@@ -1860,17 +1860,20 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
 }
 
 @article{Schuh2008,
- abstract = {An oocyte matures into an egg by extruding half of the chromosomes in a small polar body. This extremely asymmetric division enables the oocyte to retain sufficient storage material for the development of the embryo after fertilization. To divide asymmetrically, mammalian oocytes relocate the spindle from their center to the cortex. In all mammalian species analyzed so far, including human [1], mouse [2], cow [3], pig [4], and hamster [5], spindle relocation depends on filamentous actin (F-actin). However, even though spindle relocation is essential for fertility [6], the involved F-actin structures and the mechanism by which they relocate the spindle are unknown. Here we show in live mouse oocytes that spindle relocation requires a continuously reorganizing cytoplasmic actin network nucleated by Formin-2 (Fmn2). We found that the spindle poles were enriched in activated myosin and pulled on this network. Inhibition of myosin activation by myosin light chain kinase (MLCK) stopped pulling and spindle relocation, indicating that myosin pulling creates the force that drives spindle movement. Based on these results, we propose the first mechanistic model for asymmetric spindle positioning in mammalian oocytes and validate five of its key predictions experimentally. © 2008 Elsevier Ltd. All rights reserved.},
+ abstract = {An oocyte matures into an egg by extruding half of the chromosomes in a small polar body. This extremely asymmetric division enables the oocyte to retain sufficient storage material for the development of the embryo after fertilization. To divide asymmetrically, mammalian oocytes relocate the spindle from their center to the cortex. In all mammalian species analyzed so far, including human, mouse, cow, pig, and hamster, spindle relocation depends on filamentous actin (F-actin). However, even though spindle relocation is essential for fertility, the involved F-actin structures and the mechanism by which they relocate the spindle are unknown. Here we show in live mouse oocytes that spindle relocation requires a continuously reorganizing cytoplasmic actin network nucleated by Formin-2 (Fmn2). We found that the spindle poles were enriched in activated myosin and pulled on this network. Inhibition of myosin activation by myosin light chain kinase (MLCK) stopped pulling and spindle relocation, indicating that myosin pulling creates the force that drives spindle movement. Based on these results, we propose the first mechanistic model for asymmetric spindle positioning in mammalian oocytes and validate five of its key predictions experimentally.},
  author = {Schuh, Melina and Ellenberg, Jan},
  doi = {10.1016/j.cub.2008.11.022},
- file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Schuh, Ellenberg/Schuh, Ellenberg - 2008 - Current Biology - A New Model for Asymmetric Spindle Positioning in Mouse Oocytes.pdf:pdf},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Schuh, Ellenberg/Schuh, Ellenberg - 2008 - Current biology CB - A New Model for Asymmetric Spindle Positioning in Mouse Oocytes.pdf:pdf},
  isbn = {1879-0445 (Electronic)},
- issn = {09609822},
- journal = {Current Biology},
- keyword = {CELLBIO},
- pages = {1986--1992},
+ issn = {1879-0445},
+ journal = {Current biology : CB},
+ keyword = {Actins,Actins: physiology,Animals,Biological,Biomechanical Phenomena,Cells,Cultured,Female,Knockout,Meiosis,Meiosis: physiology,Mice,Models,Movement,Movement: physiology,Myosins,Myosins: physiology,Nerve Tissue Proteins,Nerve Tissue Proteins: deficiency,Nerve Tissue Proteins: genetics,Nerve Tissue Proteins: physiology,Oocytes,Oocytes: growth \& development,Oocytes: physiology,Oocytes: ultrastructure,Oogenesis,Oogenesis: physiology,Spindle Apparatus,Spindle Apparatus: physiology},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/19062278},
+ month = {dec},
+ number = {24},
+ pages = {1986--92},
  pmid = {19062278},
- title = {A New Model for Asymmetric Spindle Positioning in Mouse Oocytes},
+ title = {A new model for asymmetric spindle positioning in mouse oocytes.},
  volume = {18},
  year = {2008},
 }
