--- a/library.bib
+++ b/library.bib
@@ -673,6 +673,20 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2003},
 }
 
+@article{Golde2013,
+ author = {Golde, Tom and Schuldt, Carsten and Schnau\ss, J\"{o}rg and Strehle, Dan and Glaser, Martin and K\"{a}s, Josef},
+ doi = {10.1103/PhysRevE.88.044601},
+ issn = {1539-3755},
+ journal = {Physical Review E},
+ link = {http://link.aps.org/doi/10.1103/PhysRevE.88.044601},
+ month = {oct},
+ number = {4},
+ pages = {044601},
+ title = {Fluorescent beads disintegrate actin networks},
+ volume = {88},
+ year = {2013},
+}
+
 @article{Goley2006,
  abstract = {The cellular functions of the actin cytoskeleton require precise regulation of both the initiation of actin polymerization and the organization of the resulting filaments. The actin-related protein-2/3 (ARP2/3) complex is a central player in this regulation. A decade of study has begun to shed light on the molecular mechanisms by which this powerful machine controls the polymerization, organization and recycling of actin-filament networks, both in vitro and in the living cell.},
  author = {Goley, Erin D and Welch, Matthew D},
@@ -1055,6 +1069,23 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  shorttitle = {Nat Cell Biol},
  title = {Tensile forces govern germ-layer organization in zebrafish.},
  volume = {10},
+ year = {2008},
+}
+
+@article{Kunda2008,
+ abstract = {BACKGROUND: During mitosis, animal cells undergo a complex sequence of morphological changes, from retraction of the cell margin and cell rounding at the onset of mitosis to axial elongation and cytokinesis at mitotic exit. The molecular mechanisms driving the early changes in mitotic cell form and their functional significance, however, remain unknown. Here we identify Moesin as a key player. Moesin is the sole Drosophila member of the ERM proteins, which, once activated via phosphorylation, crosslink actin filaments to the cytoplasmic tails of plasma membrane proteins. RESULTS: We find that the Moesin is activated upon entry into mitosis, is necessary for the accompanying increase in cortical rigidity and cell rounding and, when artificially activated, is sufficient to induce both processes in interphase cells, independently of Myosin II. This phospho-Moesin-induced increase in cortical rigidity plays an important role during mitotic progression, because spindle morphogenesis and chromosome alignment are compromised in Moesin RNAi cells. Significantly, however, the spindle defects observed in soft metaphase cells can be rescued by the re-establishment of cortical tension from outside the cell. CONCLUSIONS: These data show that changes in the activity and localization of Moesin that accompany mitotic progression contribute to the establishment of a stiff, rounded cortex at metaphase and to polar relaxation at anaphase and reveal the importance of this Moesin-induced increase in cortical rigidity for spindle morphogenesis and orderly chromosome segregation. In doing so, they help to explain why dynamic changes in cortical architecture are a universal feature of mitosis in animal cells.},
+ author = {Kunda, Patricia and Pelling, Andrew E and Liu, Tao and Baum, Buzz},
+ doi = {10.1016/j.cub.2007.12.051},
+ issn = {0960-9822},
+ journal = {Current biology : CB},
+ keyword = {Actins,Actins: metabolism,Animals,Cell Line,Cell Shape,Cell Shape: physiology,Chromosome Segregation,Chromosome Segregation: physiology,Drosophila Proteins,Drosophila Proteins: metabolism,Interphase,Interphase: physiology,Microfilament Proteins,Microfilament Proteins: metabolism,Mitosis,Mitosis: physiology,Myosin Type II,Myosin Type II: metabolism,Phosphorylation,Protein-Serine-Threonine Kinases,Protein-Serine-Threonine Kinases: metabolism,Spindle Apparatus,Spindle Apparatus: metabolism,Time Factors},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/18207738},
+ month = {jan},
+ number = {2},
+ pages = {91--101},
+ pmid = {18207738},
+ title = {Moesin controls cortical rigidity, cell rounding, and spindle morphogenesis during mitosis.},
+ volume = {18},
  year = {2008},
 }
 
@@ -1894,6 +1925,40 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2013},
 }
 
+@article{Schwarz2000,
+ abstract = {Dictyostelium discoideum myosin Ik (MyoK) is a novel type of myosin distinguished by a remarkable architecture. MyoK is related to class I myosins but lacks a cargo-binding tail domain and carries an insertion in a surface loop suggested to modulate motor velocity. This insertion shows similarity to a secondary actin-binding site present in the tail of some class I myosins, and indeed a GST-loop construct binds actin. Probably as a consequence, binding of MyoK to actin was not only ATP- but also salt-dependent. Moreover, as both binding sites reside within its motor domain and carry potential sites of regulation, MyoK might represent a new form of actin crosslinker. MyoK was distributed in the cytoplasm with a significant enrichment in dynamic regions of the cortex. Absence of MyoK resulted in a drop of cortical tension whereas overexpression led to significantly increased tension. Absence and overexpression of MyoK dramatically affected the cortical actin cytoskeleton and resulted in reduced initial rates of phagocytosis. Cells lacking MyoK showed excessive ruffling, mostly in the form of large lamellipodia, accompanied by a thicker basal actin cortex. At early stages of development, aggregation of myoK null cells was slowed due to reduced motility. Altogether, the data indicate a distinctive role for MyoK in the maintenance and dynamics of the cell cortex.},
+ author = {Schwarz, E C and Neuhaus, E M and Kistler, C and Henkel, A W and Soldati, T},
+ issn = {0021-9533},
+ journal = {Journal of cell science},
+ keyword = {Actins,Actins: metabolism,Animals,Cell Aggregation,Cell Aggregation: physiology,Cell Movement,Cell Movement: physiology,Cross-Linking Reagents,Cross-Linking Reagents: metabolism,Cytoskeleton,Cytoskeleton: chemistry,Cytoskeleton: physiology,Dictyostelium,Dictyostelium: chemistry,Dictyostelium: cytology,Dictyostelium: genetics,Fluorescent Antibody Technique,Gene Expression Regulation, Developmental,Mutagenesis,Mutagenesis: physiology,Myosin Type I,Myosins,Myosins: analysis,Myosins: genetics,Myosins: physiology,Phagocytosis,Phagocytosis: physiology,Phenotype,Protozoan Proteins,RNA, Messenger,RNA, Messenger: analysis,Recombinant Fusion Proteins,Recombinant Fusion Proteins: physiology,Stress, Mechanical},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/10652255},
+ month = {feb},
+ pages = {621--33},
+ pmid = {10652255},
+ title = {Dictyostelium myosin IK is involved in the maintenance of cortical tension and affects motility and phagocytosis.},
+ volume = {113 ( Pt 4},
+ year = {2000},
+}
+
+@misc{Seljebotn2009,
+ abstract = {Cython has recently gained popularity as a tool for conveniently performing numerical computations in the Python environment, as well as mixing efficient calls to natively compiled libraries with Python code. We discuss Cython's features for fast NumPy array access in detail through examples and benchmarks. Using Cython to call natively compiled scientific libraries as well as using Cython in parallel computations is also given consideration. We conclude with a note on possible directions for future Cython development.},
+ annote = {@ARTICLE\{ behnel2010cython, author=\{Behnel, S. and Bradshaw, R. and Citro, C. and Dalcin, L. and Seljebotn, D.S. and Smith, K.\},
+ author = {Seljebotn, Dag Sverre},
+ booktitle = {Fast numerical computations with Cython},
+ doi = {\{10.1109/MCSE.2010.118\}},
+ issn = {\{1521-9615\}},
+ journal = {\{Computing in Science Engineering\}},
+ keyword = {\{Cython language;Fortran code;Python language extension;numerical loops;programming language;C language;numerical analysis;\}},
+ link = {http://conference.scipy.org/proceedings/SciPy2009/paper\_2/},
+ month = {march-april},
+ number = {\{2\}},
+ pages = {\{31 -39\}},
+ title = {Proceedings of the Python in Science Conference (SciPy): Fast numerical computations with Cython},
+ urldate = {11/07/14},
+ volume = {\{13\}},
+ year = {2009},
+}
+
 @article{Semmrich2008,
  abstract = {Using a variety of different rheological approaches, we study the nonlinear shear response of purified entangled F-actin solutions. We show that the choice of the experimental protocol is crucial. Furthermore, a transition between stress hardening and weakening can be induced even in purely entangled solutions. This transition depends on various ambient and network parameters including temperature, buffer salt concentration, filament length and density.},
  author = {Semmrich, Christine and Larsen, Ryan J. and Bausch, Andreas R.},
@@ -2024,6 +2089,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {An Empirical Investigation into Programming Language Syntax},
  volume = {13},
  year = {2013},
+}
+
+@article{Stewart2011,
+ abstract = {During mitosis, adherent animal cells undergo a drastic shape change, from essentially flat to round. Mitotic cell rounding is thought to facilitate organization within the mitotic cell and be necessary for the geometric requirements of division. However, the forces that drive this shape change remain poorly understood in the presence of external impediments, such as a tissue environment. Here we use cantilevers to track cell rounding force and volume. We show that cells have an outward rounding force, which increases as cells enter mitosis. We find that this mitotic rounding force depends both on the actomyosin cytoskeleton and the cells' ability to regulate osmolarity. The rounding force itself is generated by an osmotic pressure. However, the actomyosin cortex is required to maintain this rounding force against external impediments. Instantaneous disruption of the actomyosin cortex leads to volume increase, and stimulation of actomyosin contraction leads to volume decrease. These results show that in cells, osmotic pressure is balanced by inwardly directed actomyosin cortex contraction. Thus, by locally modulating actomyosin-cortex-dependent surface tension and globally regulating osmotic pressure, cells can control their volume, shape and mechanical properties.},
+ author = {Stewart, Martin P and Helenius, Jonne and Toyoda, Yusuke and Ramanathan, Subramanian P and Muller, Daniel J and Hyman, Anthony A},
+ doi = {10.1038/nature09642},
+ issn = {1476-4687},
+ journal = {Nature},
+ keyword = {Actomyosin,Actomyosin: metabolism,Animals,Atomic Force,Biological,Cell Shape,Cell Shape: drug effects,Cell Shape: physiology,Cell Size,Cell Size: drug effects,Cytochalasin D,Cytochalasin D: pharmacology,Cytoskeleton,Cytoskeleton: drug effects,Cytoskeleton: metabolism,HeLa Cells,Humans,Hydrostatic Pressure,Microscopy, Atomic Force,Mitosis,Models, Biological,Osmolar Concentration,Osmotic Pressure,Prophase},
+ link = {http://dx.doi.org/10.1038/nature09642 http://www.ncbi.nlm.nih.gov/pubmed/21196934},
+ month = {jan},
+ number = {7329},
+ pages = {226--30},
+ pmid = {21196934},
+ publisher = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+ shorttitle = {Nature},
+ title = {Hydrostatic pressure and the actomyosin cortex drive mitotic cell rounding.},
+ volume = {469},
+ year = {2011},
 }
 
 @article{Strehle2011,
@@ -2221,6 +2305,21 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Microtubule dynamics},
  volume = {58},
  year = {2001},
+}
+
+@article{VanDerGucht2005,
+ abstract = {By using a simple assay composed of purified proteins, we studied the spontaneous polarization of actin networks polymerizing on spherical beads, which subsequently undergo movement. We show evidence that this symmetry breaking is based on the release of elastic energy, analogous to the fracture of polymer gels. The dynamics of this process and the thickness at which it occurs depend on the growth rate and mechanical properties of the actin gel. We explain our experimental results with a model based on elasticity theory and fracture mechanics.},
+ author = {van der Gucht, Jasper and Paluch, Ewa and Plastino, Julie and Sykes, C\'{e}cile},
+ doi = {10.1073/pnas.0502121102},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/van der Gucht et al/van der Gucht et al. - 2005 - Proceedings of the National Academy of Sciences of the United States of America - Stress release drives s.html:html;:Users/matthiasbussonnier/Documents/Mendeley Desktop/van der Gucht et al/van der Gucht et al. - 2005 - Proceedings of the National Academy of Sciences of the United States of America - Stress release drives sy.pdf:pdf},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ link = {http://www.pnas.org/content/102/22/7847.abstract http://www.pnas.org/content/102/22/7847.full.pdf http://www.pnas.org/content/102/22/7847.short},
+ month = {may},
+ number = {22},
+ pages = {7847 --7852},
+ title = {Stress release drives symmetry breaking for actin-based movement},
+ volume = {102},
+ year = {2005},
 }
 
 @article{VanDijk2014,
