more fixup of timos comment

--- a/library.bib
+++ b/library.bib
@@ -1139,6 +1139,31 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2005},
 }
 
+@article{Liverpool,
+ author = {Liverpool, Tanniemola B},
+ issn = {1471-2962},
+ language = {en},
+ link = {http://rsta.royalsocietypublishing.org/content/364/1849/3335/F2.expansion.html},
+ title = {Active gels: where polymer physics meets cytoskeletal dynamics },
+}
+
+@article{Liverpool2006,
+ abstract = {The cytoskeleton provides eukaryotic cells with mechanical support and helps them to perform their biological functions. It is predominantly composed of a network of semiflexible polar protein filaments. In addition, there are many accessory proteins that bind to these filaments, regulate their assembly, link them to organelles and provide the motors that either move the organelles along the filaments or move the filaments themselves. A natural approach to such a multiple particle system is the study of its collective excitations. I review some recent work on the theoretical description of the emergence of a number of particular collective motile behaviours from the interactions between different elements of the cytoskeleton. In order to do this, close analogies have been made to the study of driven soft condensed matter systems. However, it emerges naturally that a description of these soft active motile systems gives rise to new types of collective phenomena not seen in conventional soft systems. I discuss the implications of these results and perspectives for the future.},
+ author = {Liverpool, Tanniemola B},
+ doi = {10.1098/rsta.2006.1897},
+ issn = {1364-503X},
+ journal = {Philosophical transactions. Series A, Mathematical, physical, and engineering sciences},
+ keyword = {Actins,Actins: chemistry,Actins: physiology,Biological,Cytoskeleton,Cytoskeleton: chemistry,Cytoskeleton: physiology,Microtubules,Microtubules: chemistry,Microtubules: physiology,Models,Molecular Motor Proteins,Molecular Motor Proteins: chemistry,Molecular Motor Proteins: physiology,Polymers,Polymers: chemistry},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/17090463},
+ month = {dec},
+ number = {1849},
+ pages = {3335--55},
+ pmid = {17090463},
+ title = {Active gels: where polymer physics meets cytoskeletal dynamics.},
+ volume = {364},
+ year = {2006},
+}
+
 @article{Loisel1999,
  abstract = {Actin polymerization is essential for cell locomotion and is thought to generate the force responsible for cellular protrusions. The Arp2/3 complex is required to stimulate actin assembly at the leading edge in response to signalling. The bacteria Listeria and Shigella bypass the signalling pathway and harness the Arp2/3 complex to induce actin assembly and to propel themselves in living cells. However, the Arp2/3 complex alone is insufficient to promote movement. Here we have used pure components of the actin cytoskeleton to reconstitute sustained movement in Listeria and Shigella in vitro. Actin-based propulsion is driven by the free energy released by ATP hydrolysis linked to actin polymerization, and does not require myosin. In addition to actin and activated Arp2/3 complex, actin depolymerizing factor (ADF, or cofilin) and capping protein are also required for motility as they maintain a high steady-state level of G-actin, which controls the rate of unidirectional growth of actin filaments at the surface of the bacterium. The movement is more effective when profilin, alpha-actinin and VASP (for Listeria) are also included. These results have implications for our understanding of the mechanism of actin-based motility in cells.},
  author = {Loisel, T P and Boujemaa, R and Pantaloni, D and Carlier, M F},
@@ -1502,6 +1527,24 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  school = {Paris 7},
  title = {Etude du r\^{o}le de la prot\'{e}ine VASP dans la dynamique et la m\'{e}canique des r\'{e}seaux d'actine avec un syst\`{e}me biomim\'{e}tique de la motilit\'{e} cellulaire},
  year = {2012},
+}
+
+@article{Ofer2011,
+ abstract = {A central challenge in motility research is to quantitatively understand how numerous molecular building blocks self-organize to achieve coherent shape and movement on cellular scales. A classic example of such self-organization is lamellipodial motility in which forward translocation is driven by a treadmilling actin network. Actin polymerization has been shown to be mechanically restrained by membrane tension in the lamellipodium. However, it remains unclear how membrane tension is determined, what is responsible for retraction and shaping of the rear boundary, and overall how actin-driven protrusion at the front is coordinated with retraction at the rear. To answer these questions, we utilize lamellipodial fragments from fish epithelial keratocytes which lack a cell body but retain the ability to crawl. The absence of the voluminous cell body in fragments simplifies the relation between lamellipodial geometry and cytoskeletal dynamics. We find that shape and speed are highly correlated over time within individual fragments, whereby faster crawling is accompanied by larger front-to-rear lamellipodial length. Furthermore, we find that the actin network density decays exponentially from front-to-rear indicating a constant net disassembly rate. These findings lead us to a simple hypothesis of a disassembly clock mechanism in which rear position is determined by where the actin network has disassembled enough for membrane tension to crush it and haul it forward. This model allows us to directly relate membrane tension with actin assembly and disassembly dynamics and elucidate the role of the cell membrane as a global mechanical regulator which coordinates protrusion and retraction.},
+ author = {Ofer, Noa and Mogilner, Alexander and Keren, Kinneret},
+ doi = {10.1073/pnas.1105333108},
+ file = {::},
+ issn = {1091-6490},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ keyword = {Actins,Actins: chemistry,Animals,Cell Membrane,Cell Membrane: metabolism,Cell Movement,Cichlids,Cytoskeleton,Cytoskeleton: metabolism,Epithelial Cells,Epithelial Cells: cytology,Fishes,Keratinocytes,Keratinocytes: cytology,Microscopy, Fluorescence,Microscopy, Fluorescence: methods,Microscopy, Phase-Contrast,Microscopy, Phase-Contrast: methods,Models, Statistical,Myosins,Myosins: chemistry,Pseudopodia,Pseudopodia: metabolism},
+ link = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3251093\&tool=pmcentrez\&rendertype=abstract},
+ month = {dec},
+ number = {51},
+ pages = {20394--9},
+ pmid = {22159033},
+ title = {Actin disassembly clock determines shape and speed of lamellipodial fragments.},
+ volume = {108},
+ year = {2011},
 }
 
 @article{Oliphant2007,
