move oocyte and fixup

--- a/library.bib
+++ b/library.bib
@@ -2308,7 +2308,7 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
 
 @article{Tinevez2009,
  abstract = {Blebs are spherical membrane protrusions often observed during cell migration, cell spreading, cytokinesis, and apoptosis, both in cultured cells and in vivo. Bleb expansion is thought to be driven by the contractile actomyosin cortex, which generates hydrostatic pressure in the cytoplasm and can thus drive herniations of the plasma membrane. However, the role of cortical tension in bleb formation has not been directly tested, and despite the importance of blebbing, little is known about the mechanisms of bleb growth. In order to explore the link between cortical tension and bleb expansion, we induced bleb formation on cells with different tensions. Blebs were nucleated in a controlled manner by laser ablation of the cortex, mimicking endogenous bleb nucleation. Cortical tension was modified by treatments affecting the level of myosin activity or proteins regulating actin turnover. We show that there is a critical tension below which blebs cannot expand. Above this threshold, the maximal size of a bleb strongly depends on tension, and this dependence can be fitted with a model of the cortex as an active elastic material. Together, our observations and model allow us to relate bleb shape parameters to the underlying cellular mechanics and provide insights as to how bleb formation can be biochemically regulated during cell motility.},
- author = {Tinevez, Jean-Yves and Schulze, Ulrike and Salbreux, Guillaume and Roensch, Julia and Joanny, Jean-Fran\c{c}ois and Paluch, Ewa},
+ author = {Tinevez, Jean-Yves and Schulze, Ulrike and Salbreux, Guillaume and Roensch, Julia and Joanny, Jean-Francois and Paluch, Ewa},
  doi = {10.1073/pnas.0903353106},
  file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Tinevez et al/Tinevez et al. - 2009 - Proceedings of the National Academy of Sciences of the United States of America - Role of cortical tension in bl.pdf:pdf},
  issn = {0027-8424},
