--- a/library.bib
+++ b/library.bib
@@ -7,7 +7,8 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 author = {Helfrich, W},
 issn = {0341-0471},
 journal = {Zeitschrift f\"{u}r Naturforschung. Teil C: Biochemie, Biophysik, Biologie, Virologie},
-keywords = {Artificial,Elasticity,Lipids,Magnetics,Mathematics,Membranes},
+keywords = {Artificial,Elasticity,Lipids,Magnetics,Mathematics,Membranes,tag},
+mendeley-tags = {tag},
 number = {11},
 pages = {693--703},
 pmid = {4273690},
