fixum before conclusion

--- a/tpage.tex
+++ b/tpage.tex
@@ -1,33 +1,81 @@
+%%       \begin{center}
+%%        \begin{minipage}{0.75\linewidth}
+%%            \centering
+%%            % \rule{0.4\linewidth}{0.15\linewidth}\par
+%%            {\uppercase{\large \'Ecole Doctorale Mati\`ere Condend\'ee et interface \par}}
+%%            {\uppercase{\large Laboratoire Physique Chimie du Vivant, Institut Curie, Umr 168 \par}}
+%%            \vspace{2cm}
+%%            {\uppercase{\Large  Doctorat \par}}
+%%            {\uppercase{\Large  Physique \par}}
+%%            \vspace{2cm}
+%%           {\Large Bussonnier Matthias\par}
+%%            \vspace{2cm}
+%%            {\Large Actin Gels mechanics\par}
+%%            {\Large Mechanique des gels d'actine\par}
+%%            \vspace{2cm}
+%%            \Large
+%%            Th\`ese diri\'ee par Timo Betz et C\'ecile Sykes,\\
+%%            Soutenue le 16 Septembre 2014\\
+%%            \vspace{2cm}
+%%                {\Large Jury}
+%%            \vspace{1cm}
+%%                \large
+%%                \begin{flushleft}
+%%                Prof. Atef Anacios , Pr\'esident\\
+%%                Dr. Laurent Blanchoin\\
+%%                Dr. Guillaume Rommet-Lemonne, Rapporteur\\
+%%                Prof. Dr. Dr. Karsten Kruse, Rapporteur\\
+%%                \end{flushleft}
+%%
+%%            \vspace{2cm}
+%%        \end{minipage}
+%%    \end{center}
+%%    \newpage
+
+
        \begin{center}
         \begin{minipage}{0.75\linewidth}
-            \centering
-            % \rule{0.4\linewidth}{0.15\linewidth}\par
-            {\uppercase{\large \'Ecole Doctorale Mati\`ere Condend\'ee et interface \par}}
-            {\uppercase{\large Laboratoire Physique Chimie du Vivant, Institut Curie, Umr 168 \par}}
-            \vspace{2cm}
-            {\uppercase{\Large  Doctorat \par}}
-            {\uppercase{\Large  Physique \par}}
-            \vspace{2cm}
-           {\Large Bussonnier Matthias\par}
-            \vspace{2cm}
-            {\Large Actin Gels mechanics\par}
-            {\Large Mechanique des gels d'actine\par}
-            \vspace{2cm}
-            \Large
-            Th\`ese diri\'ee par Timo Betz et C\'ecile Sykes,\\
-            Soutenue le 16 Septembre 2014\\
-            \vspace{2cm}
-                {\Large Jury}
-            \vspace{1cm}
-                \large
-                \begin{flushleft}
-                Prof. Atef Anacios , Pr\'esident\\
-                Dr. Laurent Blanchoin\\
-                Dr. Guillaume Rommet-Lemonne, Rapporteur\\
-                Prof. Dr. Dr. Karsten Kruse, Rapporteur\\
-                \end{flushleft}
-
-            \vspace{2cm}
+    \begin{center}
+            \noindent {\large \textbf{UNIVERSITÉ PARIS DIDEROT - SORBONNE PARIS CITE}} \\ 
+            \vspace*{0.3cm}
+            \noindent {\large \textbf{ÉCOLE DOCTORALE 518}} \\
+            \noindent \textbf{CONDENSED MATTER \\ AND INTERFACES} \\
+            \vspace*{0.5cm}
+            \noindent \Huge \textbf{T H È S E} \\
+            \vspace*{0.3cm}
+            \noindent \large {pour obtenir le grade de} \\
+            \vspace*{0.3cm}
+            \noindent \LARGE \textbf{Docteur en Sciences} \\
+            \vspace*{0.3cm}
+            \noindent \Large de l'Université PARIS DIDEROT (Paris 7) \\
+            \noindent \Large \textbf{Spécialité : \textsc{Interface Physique-Biologie}}\\
+            \vspace*{0.4cm}
+            \noindent \large {Présentée et soutenue par\\}
+            \noindent \LARGE Matthias \textsc{Bussonnier} \\
+            \vspace*{0.8cm}
+            \noindent {\Huge \textbf{Actin Gels mechanics \\ Mécanique des Gels D'actine}} \\
+            \vspace*{0.8cm}
+            \noindent \Large Thèse dirigée par Timo \textsc{Betz} et Cécile \textsc{Sykes} \\
+            \vspace*{0.2cm}
+            \noindent \Large préparée à l'Institut Curie \\
+            \vspace*{0.2cm}
+            \noindent \large soutenue le 16 Septembre 2014, devant le jury composé de :\\
+            \vspace*{0.5cm}
+            \end{center}
+            %\noindent \large \textbf{Jury :} \\
+            \begin{center}
+            \noindent \large 
+            \begin{tabular}{llcl}
+                \textit{Président :}	& Prof. Atef \textsc{Asnacios }& - & Université Paris Diderot \\
+                \textit{Rapporteurs :}	& Prof. Dr. Dr. Karsten Kruse \textsc{Moskalenko}& - & Universität des Saarlandes \\
+                            & Guillaume \textsc{Romet-Lemonne}	& - & LEBS - CNTS\\
+                            
+                \textit{Examinateurs :}	& Laurent \textsc{Blanchoin}& - & CEA Grenoble\\
+                \textit{Directrice :}   & Timo \textsc{Betz}		& - & Institut Curie\\
+                                        & Cécile \textsc{Sykes}		& - & Institut Curie\\
+                            
+            \end{tabular}
+            \end{center}
         \end{minipage}
     \end{center}
     \newpage
