fixup typos and othographe, rewrap

--- a/tpage.tex
+++ b/tpage.tex
@@ -32,8 +32,7 @@
 %%    \end{center}
 %%    \newpage
 
-
-       \begin{center}
+    \begin{center}
         \begin{minipage}{0.75\linewidth}
     \begin{center}
             \noindent {\large \textbf{UNIVERSITÉ PARIS DIDEROT - SORBONNE PARIS CITE}} \\ 
@@ -48,7 +47,7 @@
             \noindent \LARGE \textbf{Docteur en Sciences} \\
             \vspace*{0.3cm}
             \noindent \Large de l'Université PARIS DIDEROT (Paris 7) \\
-            \noindent \Large \textbf{Spécialité : \textsc{Interface Physique-Biologie}}\\
+            %\noindent \Large \textbf{Spécialité : \textsc{Interface Physique-Biologie}}\\
             \vspace*{0.4cm}
             \noindent \large {Présentée et soutenue par\\}
             \noindent \LARGE Matthias \textsc{Bussonnier} \\
@@ -59,20 +58,20 @@
             \vspace*{0.2cm}
             \noindent \Large préparée à l'Institut Curie \\
             \vspace*{0.2cm}
-            \noindent \large soutenue le 16 Septembre 2014, devant le jury composé de :\\
+            \noindent \large Soutenance le 16 Septembre 2014, devant le jury composé de :\\
             \vspace*{0.5cm}
             \end{center}
             %\noindent \large \textbf{Jury :} \\
             \begin{center}
             \noindent \large 
             \begin{tabular}{llcl}
-                \textit{Président :}	& Prof. Atef \textsc{Asnacios }& - & Université Paris Diderot \\
-                \textit{Rapporteurs :}	& Prof. Dr. Dr. Karsten Kruse \textsc{Moskalenko}& - & Universität des Saarlandes \\
-                            & Guillaume \textsc{Romet-Lemonne}	& - & LEBS - CNTS\\
+                \textit{Président :}    & Prof. Atef            \textsc{Asnacios }       & - & Université Paris Diderot \\
+                \textit{Rapporteurs :}  & Prof. Dr. Dr. Karsten \textsc{Kruse}           & - & Universität des Saarlandes \\
+                                        & Guillaume             \textsc{Romet-Lemonne}   & - & LEBS - CNRS\\
                             
-                \textit{Examinateurs :}	& Laurent \textsc{Blanchoin}& - & CEA Grenoble\\
-                \textit{Directrice :}   & Timo \textsc{Betz}		& - & Institut Curie\\
-                                        & Cécile \textsc{Sykes}		& - & Institut Curie\\
+                \textit{Examinateurs :} & Laurent               \textsc{Blanchoin}       & - & CEA Grenoble\\
+                \textit{Directeurs: }   & Timo                  \textsc{Betz}            & - & Institut Curie\\
+                                        & Cécile                \textsc{Sykes}           & - & Institut Curie\\
                             
             \end{tabular}
             \end{center}
