--- a/tpage.tex
+++ b/tpage.tex
@@ -10,7 +10,7 @@
 %%            \vspace{2cm}
 %%           {\Large Bussonnier Matthias\par}
 %%            \vspace{2cm}
-%%            {\Large Actin Gels mechanics\par}
+%%            {\Large Actin Gel mechanics\par}
 %%            {\Large Mechanique des gels d'actine\par}
 %%            \vspace{2cm}
 %%            \Large
