some corections from Camille

--- a/tpage.tex
+++ b/tpage.tex
@@ -35,7 +35,7 @@
     \begin{center}
         \begin{minipage}{0.75\linewidth}
     \begin{center}
-            \noindent {\large \textbf{UNIVERSITÉ PARIS DIDEROT - SORBONNE PARIS CITE}} \\ 
+            \noindent {\large \textbf{UNIVERSITÉ PARIS DIDEROT - SORBONNE PARIS CITÉ}} \\ 
             \vspace*{0.3cm}
             \noindent {\large \textbf{ÉCOLE DOCTORALE 518}} \\
             \noindent \textbf{CONDENSED MATTER \\ AND INTERFACES} \\
@@ -67,11 +67,11 @@
             \begin{tabular}{llcl}
                 \textit{Président :}    & Prof. Atef            \textsc{Asnacios }       & - & Université Paris Diderot \\
                 \textit{Rapporteurs :}  & Prof. Dr. Dr. Karsten \textsc{Kruse}           & - & Universität des Saarlandes \\
-                                        & Guillaume             \textsc{Romet-Lemonne}   & - & LEBS - CNRS\\
+                                        & Dr. Guillaume         \textsc{Romet-Lemonne}   & - & LEBS - CNRS\\
                             
-                \textit{Examinateurs :} & Laurent               \textsc{Blanchoin}       & - & CEA Grenoble\\
-                \textit{Directeurs: }   & Timo                  \textsc{Betz}            & - & Institut Curie\\
-                                        & Cécile                \textsc{Sykes}           & - & Institut Curie\\
+                \textit{Examinateurs :} & Dr. Laurent           \textsc{Blanchoin}       & - & CEA Grenoble\\
+                \textit{Directeurs : }  & Dr. Timo              \textsc{Betz}            & - & Institut Curie\\
+                                        & Prof. Cécile          \textsc{Sykes}           & - & Institut Curie\\
                             
             \end{tabular}
             \end{center}
