detail title and show url in footnote

--- a/tpage.tex
+++ b/tpage.tex
@@ -52,13 +52,13 @@
             \noindent \large {Présentée et soutenue par\\}
             \noindent \LARGE Matthias \textsc{Bussonnier} \\
             \vspace*{0.8cm}
-            \noindent {\Huge \textbf{Actin Gels mechanics \\ Mécanique des Gels D'actine}} \\
+            \noindent {\Huge \textbf{Actin Gel mechanics \\ Mécanique des Gels D'actine}} \\
             \vspace*{0.8cm}
             \noindent \Large Thèse dirigée par Timo \textsc{Betz} et Cécile \textsc{Sykes} \\
             \vspace*{0.2cm}
             \noindent \Large préparée à l'Institut Curie \\
             \vspace*{0.2cm}
-            \noindent \large Soutenance le 16 Septembre 2014, devant le jury composé de :\\
+            \noindent \large Soutenance le 16 Septembre 2014, devant le jury composé de~:\\
             \vspace*{0.5cm}
             \end{center}
             %\noindent \large \textbf{Jury :} \\
