fix color and odd pages

--- a/tpage.tex
+++ b/tpage.tex
@@ -77,4 +77,9 @@
             \end{center}
         \end{minipage}
     \end{center}
+    \clearpage
+    \null
+    \thispagestyle{empty}%
+    \addtocounter{page}{-1}%
     \newpage
+
