add pdf version of figures

--- a/tpage.tex
+++ b/tpage.tex
@@ -52,7 +52,9 @@
             \noindent \large {Présentée et soutenue par\\}
             \noindent \LARGE Matthias \textsc{Bussonnier} \\
             \vspace*{0.8cm}
-            \noindent {\Huge \textbf{Actin Gel mechanics \\ Mécanique des Gels D'actine}} \\
+            \noindent {\Huge \textbf{Actin Gel mechanics %\\ 
+                %Mécanique des Gels D'actine
+                }} \\
             \vspace*{0.8cm}
             \noindent \Large Thèse dirigée par Timo \textsc{Betz} et Cécile \textsc{Sykes} \\
             \vspace*{0.2cm}
